--- a/src/main/webapp/accountsttr.html
+++ b/src/main/webapp/accountsttr.html
@@ -156,7 +156,7 @@
             <ul>
                 <li>Each transaction amount is about $6000</li>
                 <li>Stock supports short selling on trading</li>    
-                <li>current trade is not including in calculation</li>                                      
+                <li>Current trade is not including in calculation</li>                                      
                 <li>Buy or sell has no commission fee</li>                    
             </ul>             
         </div><!-- /page -->           
