--- a/src/main/webapp/accountst.html
+++ b/src/main/webapp/accountst.html
@@ -31,32 +31,66 @@
         <link rel="stylesheet" type="text/css" href="css/app.css" />
         <link rel="shortcut icon" href="#" />
         <title>IISWEB System</title>
+
+        <style>           
+            #alertconfirm {
+                display: none;
+                background-color: #f2f4ef;
+                border: 1px solid #aaa;
+                position: relative;
+                width: 250px;
+                height: 150px;
+                top: 20%;
+                left: 50%;
+                margin-left: -100px;
+                padding: 8px;
+                box-sizing: border-box;
+                text-align: center;
+            }
+
+            #alertconfirm button {
+                background-color: #3388cc;
+                display: inline-block;
+                border-radius: 5px;
+                border: 1px solid #aaa;
+                padding: 5px;
+                text-align: center;
+                width: 80px;
+                cursor: pointer;
+                margin-top: 20px;
+            }
+            #alertconfirm .message {
+                text-align: left;
+            }
+        </style>        
+
     </head>
     <!--
     https://demos.jquerymobile.com/1.3.2/widgets/listviews/index.html#&ui-state=dialog
     -->
     <body>
+        <style>
+            .ui-popup-container {
+                height: 70vh;
+                width: 70vw;
+            }
+        </style>        
         <div data-role="page" id="page-index">
             <div data-role="header" data-theme="c" data-position="fixed">
                 <a href="account_1.html" data-icon="back" ui-btn-icon-Left data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
                 <a href="accountst_1.html" data-icon="recycle" ui-btn-icon-Right data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
-
-                <!--                <div class="ui-icon-alt"> Class added to the wrapper 
-                                    <a href="account_1.html"  data-role="button" data-icon="back"  data-icon="back" data-iconpos="notext" data-theme="c" data-inline="true"></a>
-                                    <a href="index.html" rel="external" data-role="button" data-icon="home" data-iconpos="notext" data-theme="c" data-inline="true"></a>
-                                    <a href="accountst_1.html" data-role="button" data-icon="recycle" data-iconpos="notext" data-theme="c" data-inline="true"></a>
-                                </div>-->
 
                 <h1>IISWEB System</h1>
             </div><!-- /header -->
 
             <h2 id="accheader" class="mc-text-center">Account</h2>
             <p>
-            </p>
-            <div id="myidbtn"  data-role="controlgroup" data-type="horizontal" data-theme="a" style="font-size:0.7em; margin-left:auto; margin-right:auto;width:100%; ">
-                <!--<button id="addbtn" >Add</button> <button id="removebtn"  >Remove</button>-->     
-                <a href="#popupAdd" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline " data-transition="pop">Add</a>
-                <div data-role="popup" id="popupAdd" data-theme="a" class="ui-corner-all">
+
+
+            <div data-role="footer" data-theme="b" >
+                <!--https://demos.jquerymobile.com/1.2.0/docs/toolbars/docs-footers.html-->
+                <a href="#popupAdd" data-icon="plus" data-rel="popup" data-position-to="window" data-transition="pop">Add Stock</a>
+                <div data-role="popup" id="popupAdd" data-theme="b" class="ui-corner-all" >
                         <form>
                                 <div style="padding:0px 0px;">
                                         <h3>Add new Stock symbol</h3>
@@ -66,9 +100,9 @@
                                         <button type="submit" id="addsubmit" class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left">Add</button>
                                     </div>
                             </form>
-                </div>                
-                <a href="#popupRemove" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline " data-transition="pop">Remove</a>
-                <div data-role="popup" id="popupRemove" data-theme="a" class="ui-corner-all">
+                </div>                    
+                <a href="#popupRemove" data-icon="minus" data-rel="popup" data-position-to="window" data-transition="pop">Remove Stock</a>
+                <div data-role="popup" id="popupRemove" data-theme="b" class="ui-corner-all">
                         <form>
                                 <div style="padding:0px 0px;">
                                         <h3>Remove Stock symbol</h3>
@@ -79,20 +113,24 @@
                                     </div>
                             </form>
                 </div>    
-            </div>
+            </div>      
 
-            <div data-role="content" id="textcontent">
-
+            <div data-role="content" id="textcontent">  
                 <!--<ul id="myid" data-role="listview" data-theme="d" data-divider-theme="d">-->                    
                 <ul id="myid" data-role="listview" data-theme="d" data-divider-theme="d">
                     <li id="0">Stock Listing</li>
                 </ul>                
             </div>
+        </div>   
+        
+        <div id="alertconfirm">
+            <div class="message"></div>
+            <button class="ok">OK</button>            
+        </div> 
 
-
-            <script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
-            <script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-            <script type="text/javascript" src="js/iisweb.js"></script>            
-            <script type="text/javascript" src="js/iiswebaccountst.js"></script>          
+        <script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
+        <script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script type="text/javascript" src="js/iisweb.js"></script>            
+        <script type="text/javascript" src="js/iiswebaccountst.js"></script>          
     </body>
 </html>
